--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "react-confetti": "^6.0.1",
+    "react-spring": "^8.0.27",
+    "react-use": "^17.2.1",
     "socket.io-client": "^3.1.0"
   }
 }
