--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-react": "^7.21.5",
     "react-confetti": "^6.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-spring": "^8.0.27",
     "react-use": "^17.2.1",
     "socket.io-client": "^3.1.0"
